--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -23,24 +23,24 @@ path = "contracts/arkadiko-yield-adapter-trait.clar"
 path = "contracts/mock-sbtc.clar"
 depends_on = ["sip-010-trait"]
 
-[contracts.arkadiko-yield-adapter]
+[contracts.arkadiko-yield-adapter-v3]
 path = "contracts/arkadiko-yield-adapter.clar"
 depends_on = ["arkadiko-yield-adapter-trait", "mock-sbtc"]
 
-[contracts.time-lock]
+[contracts.time-lock-v3]
 path = "contracts/time-lock.clar"
 
-[contracts.vault-factory]
+[contracts.vault-factory-v3]
 path = "contracts/vault-factory.clar"
-depends_on = ["time-lock"]
+depends_on = ["time-lock-v3"]
 
-[contracts.auto-yield-engine]
+[contracts.auto-yield-engine-v3]
 path = "contracts/auto-yield-engine.clar"
-depends_on = ["vault-factory", "arkadiko-yield-adapter", "mock-sbtc"]
+depends_on = ["vault-factory-v3", "arkadiko-yield-adapter-v3", "mock-sbtc"]
 
-[contracts.main-vault]
+[contracts.main-vault-v3]
 path = "contracts/main-vault.clar"
-depends_on = ["vault-factory", "time-lock", "auto-yield-engine", "mock-sbtc"]
+depends_on = ["vault-factory-v3", "time-lock-v3", "auto-yield-engine-v3", "mock-sbtc"]
 
 [repl.analysis]
 passes = ["check_checker"]
