--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "@hirosystems/chainhooks-client": "^1.0.0",
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "undici": "^7.16.0"
   },
   "devDependencies": {
     "@types/node": "20.14.10",
