--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hirosystems/chainhooks-client": "^1.0.0",
+    "@stacks/connect": "^8.2.4",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
