--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@hirosystems/chainhooks-client": "^1.0.0",
-    "@stacks/connect": "^8.2.4",
+    "@reown/appkit-common": "^1.6.2",
+    "@reown/appkit-universal-connector": "^1.6.2",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
